5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1671_1105.log
== TEST (2019-04-22 20:16:30) 
-- CODE:
brasao = input("digite brasao: ")

print("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")	
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:17:08) 
-- CODE:
brasao = input("digite brasao: ")

print("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")	
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:17:30) 
-- CODE:
brasao = input("digite brasao: ")

print("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")	
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:21:33) 
-- CODE:
brasao = input("digite brasao: ")

print("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")	
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:22:27) 
-- CODE:
brasao = str(input("digite brasao: "))

print("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")	
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:23:22) 
-- CODE:
brasao = str(input("digite brasao: "))

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")	
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif (brasao == leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:23:46) 
-- CODE:
brasao = str(input("digite brasao: "))

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")	
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif (brasao == leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 20:23:49) 
-- CODE:
brasao = str(input("digite brasao: "))

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")	
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.248807
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1105/main.py", line 7, in <module>
    elif (brasao == leao):
NameError: name 'leao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 20:26:05) 
-- CODE:
brasao = input("digite brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")	
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 20:26:19) 
-- CODE:
brasao = input("digite brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")	
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.139607
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
